welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: '<-' expected but ')' found.
for (step>-0 to 7){
                 ^Runner:12: error: illegal start of simple expression
	}
        ^