welcome.lessons.welcome.loopfor.LoopStairs.scala.code
for (variable<-0 to 3){
  avance()
}

for (step>-0 to 7){
  gauche()
  avance()
  droite()
  avance()
}